--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "prebuild": "node scripts/pre-build-check.js",
     "prebuild:docker": "node scripts/docker-prebuild.js",
     "build": "next build",
-    "build:safe": "bash scripts/safe-build.sh",
     "build:docker": "DOCKER_BUILD=true SKIP_PREBUILD=true next build",
     "start": "next start",
     "lint": "next lint",
@@ -23,23 +22,13 @@
     "pm2:delete": "pm2 delete docs-platform",
     "pm2:logs": "pm2 logs docs-platform --lines 50",
     "pm2:status": "pm2 status",
-    "docker:build": "docker build -f Dockerfile.community -t misonote-markdown:community .",
-    "docker:build:community": "docker build -f Dockerfile.community -t misonote-markdown:community .",
-    "docker:build:enterprise": "docker build -f Dockerfile.enterprise -t misonote-markdown:enterprise .",
-    "docker:run": "docker run -p 3001:3001 misonote-markdown:community",
-    "docker:run:community": "docker run -p 3001:3001 misonote-markdown:community",
-    "docker:run:enterprise": "docker run -p 3001:3001 -e MISONOTE_LICENSE_KEY=$MISONOTE_LICENSE_KEY misonote-markdown:enterprise",
-    "docker:compose": "docker-compose up -d",
-    "docker:deploy": "bash scripts/docker-deploy.sh",
-    "docker:manage": "bash scripts/docker-manage.sh",
-    "docker:logs": "docker-compose logs -f",
-    "docker:stop": "docker-compose down",
-    "docker:restart": "docker-compose restart",
-    "docker:publish": "bash scripts/docker-publish.sh",
-    "docker:publish:community": "bash scripts/docker-publish-community.sh",
-    "docker:publish:enterprise": "bash misonote-license-server/scripts/docker-publish-enterprise.sh",
-    "docker:publish:check": "bash scripts/docker-publish-check.sh",
-    "docker:publish:prepare": "bash scripts/docker-publish-check.sh && echo 'Ready to publish! Run: pnpm docker:publish:community'",
+    "docker:build": "docker build -f Dockerfile -t leeguo/misonote-markdown:latest .",
+    "docker:push": "docker push leeguo/misonote-markdown:latest",
+    "docker:build-and-push": "pnpm docker:build && pnpm docker:push",
+    "docker:run": "docker run -d -p 3001:3001 --name misonote leeguo/misonote-markdown:latest",
+    "docker:stop": "docker stop misonote && docker rm misonote",
+    "docker:logs": "docker logs -f misonote",
+    "docker:shell": "docker exec -it misonote sh",
     "license:generate-keys": "node misonote-license-server/scripts/license-generator.js generate-keys",
     "license:generate": "node misonote-license-server/scripts/license-generator.js generate",
     "license:verify": "node misonote-license-server/scripts/license-generator.js verify",
@@ -49,10 +38,9 @@
     "security:setup": "node scripts/generate-password.js",
     "security:verify": "node scripts/verify-password.js",
     "install:full": "bash scripts/install.sh",
+    "db:init": "tsx scripts/init-postgres.ts",
+    "db:migrate": "tsx scripts/migrate-to-postgres.ts",
     "clean": "rm -rf .next && rm -rf logs/*.log",
-    "build:community": "next build",
-    "build:professional": "npm run build:community && echo \"Professional build completed\"",
-    "build:enterprise": "npm run build:community && echo \"Enterprise build completed\"",
     "setup:business": "node scripts/setup-business-architecture.js"
   },
   "dependencies": {
@@ -63,10 +51,10 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@types/pg": "^8.10.9",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
-    "better-sqlite3": "^11.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "commander": "^14.0.0",
@@ -79,6 +67,7 @@
     "marked": "^15.0.12",
     "mermaid": "^11.6.0",
     "next": "15.3.2",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
@@ -106,6 +95,7 @@
     "eslint-config-next": "15.3.2",
     "jsdom": "^26.1.0",
     "tailwindcss": "^4",
+    "tsx": "^4.19.4",
     "typescript": "^5",
     "vitest": "^3.1.4"
   }
