--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,9 @@
+packages:
+  - '.'
+
 ignoredBuiltDependencies:
   - '@tailwindcss/oxide'
   - sharp
   - unrs-resolver
 onlyBuiltDependencies:
-  - better-sqlite3
+  - esbuild
