--- a/package.json
+++ b/package.json
@@ -38,8 +38,16 @@
     "security:setup": "node scripts/generate-password.js",
     "security:verify": "node scripts/verify-password.js",
     "install:full": "bash scripts/install.sh",
-    "db:init": "tsx scripts/init-postgres.ts",
+    "db:init": "tsx lib/db/init-database.ts",
+    "db:init:force": "tsx lib/db/init-database.ts --force",
+    "db:init:enterprise": "tsx lib/db/init-database.ts --enterprise",
     "db:migrate": "tsx scripts/migrate-to-postgres.ts",
+    "db:migrate:docs": "tsx scripts/migrate-docs-to-database.ts",
+    "db:migrate:docs:dry": "tsx scripts/migrate-docs-to-database.ts --dry-run",
+    "db:migrate:docs:force": "tsx scripts/migrate-docs-to-database.ts --force",
+    "db:migrate:docs:verify": "tsx scripts/migrate-docs-to-database.ts --verify",
+    "db:status": "tsx -e \"import { getDatabaseStatus } from './lib/db/init-database'; getDatabaseStatus().then(console.log)\"",
+    "db:test": "tsx scripts/test-database-adapter.ts",
     "clean": "rm -rf .next && rm -rf logs/*.log",
     "setup:business": "node scripts/setup-business-architecture.js"
   },
@@ -51,6 +59,11 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-tabs": "^1.1.12",
+    "@tiptap/extension-collaboration": "^2.12.0",
+    "@tiptap/extension-collaboration-cursor": "^2.12.0",
+    "@tiptap/extension-placeholder": "^2.12.0",
+    "@tiptap/react": "^2.12.0",
+    "@tiptap/starter-kit": "^2.12.0",
     "@types/pg": "^8.10.9",
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
@@ -63,19 +76,22 @@
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.511.0",
     "marked": "^15.0.12",
     "mermaid": "^11.6.0",
     "next": "15.3.2",
     "pg": "^8.11.3",
-    "react": "^19.0.0",
+    "react": "link:@@tiptap/react",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
     "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
