--- a/package.json
+++ b/package.json
@@ -70,7 +70,6 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
@@ -82,7 +81,7 @@
     "mermaid": "^11.6.0",
     "next": "15.3.2",
     "pg": "^8.11.3",
-    "react": "link:@@tiptap/react",
+    "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
