refactor: 重构认证系统并清理代码
- 添加 Next.js 中间件用于统一认证保护
- 实现登出 API 端点
- 统一认证 cookie 管理到 src/lib/server/auth-cookies.ts
- 大幅简化 AdminAuth 组件，移除重复代码
- 清理多个组件中的冗余代码和未使用的导入
- 添加开发环境检查脚本 (dev-with-env-check.js)
- 添加 AGENTS.md 仓库指南文档
- 移除重复的 API 拦截器代码

此次重构删除了约 450 行冗余代码，提升了代码可维护性。

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack --port 3001",
+    "dev": "node scripts/dev-with-env-check.js",
     "ws:dev": "tsx lib/websocket/simple-server.ts",
     "dev:all": "concurrently \"pnpm dev\" \"pnpm ws:dev\"",
     "prebuild": "node scripts/pre-build-check.js",
