--- a/package.json
+++ b/package.json
@@ -46,7 +46,6 @@
     "db:init:force": "tsx lib/db/init-database.ts --force",
     "db:init:enterprise": "tsx lib/db/init-database.ts --enterprise",
     "db:migrate": "tsx scripts/migrate-schema.ts",
-    "db:migrate:from-sqlite": "tsx scripts/migrate-to-postgres.ts",
     "db:migrate:docs": "tsx scripts/migrate-docs-to-database.ts",
     "db:migrate:docs:dry": "tsx scripts/migrate-docs-to-database.ts --dry-run",
     "db:migrate:docs:force": "tsx scripts/migrate-docs-to-database.ts --force",
@@ -73,12 +72,14 @@
     "autoprefixer": "^10.4.21",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "fuse.js": "^7.1.0",
     "gray-matter": "^4.0.3",
     "highlight.js": "^11.11.1",
+    "lib0": "^0.2.108",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "lru-cache": "^11.1.0",
@@ -88,6 +89,7 @@
     "next": "15.3.2",
     "pg": "^8.11.3",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
     "rehype-highlight": "^7.0.2",
@@ -97,6 +99,7 @@
     "winston": "^3.17.0",
     "ws": "^8.18.0",
     "y-websocket": "^3.0.0",
+    "y-protocols": "^1.0.6",
     "yjs": "^13.6.27"
   },
   "devDependencies": {
